# ColorClient

./: .gitignore  CMakeLists.txt  CMakeLists_qt.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
include/: mainwindow.h
src/gui/: mainwindow.cpp  mainwindow.ui
